--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "codemirror": "^5.39.0",
     "less": "^3.0.4",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "tooltip.js": "^1.2.0"
   },
   "devDependencies": {
     "parcel": "^1.9.2"
