--- a/playground/package.json
+++ b/playground/package.json
@@ -8,9 +8,13 @@
     "start": "rm -r .cache && parcel ./index.html"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "codemirror": "^5.39.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "less": "^3.0.4",
     "lodash": "^4.17.10",
+    "querystring": "^0.2.0",
     "tooltip.js": "^1.2.0"
   },
   "devDependencies": {
