--- a/playground/package.json
+++ b/playground/package.json
@@ -8,8 +8,8 @@
     "start": "rm -r .cache && parcel ./index.html"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "codemirror": "^5.39.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -17,6 +17,7 @@
     "lodash": "^4.17.10",
     "querystring": "^0.2.0",
     "tooltip.js": "^1.2.0",
+    "vex-dialog": "^1.1.0",
     "vex-js": "^4.1.0"
   },
   "devDependencies": {
