--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "test": "npm run compile && mocha"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "jison": "^0.4.18",
-    "joi": "^13.4.0"
+    "jison": "^0.4.18"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
