--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "jison": "^0.4.18"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "mocha": "^5.2.0",
+    "prettier-eslint": "^8.8.2"
   }
 }
